DuPont DevSB/src/objects/ffirule__IntegrationRuleRelationship__c.object
<CustomObject>
    <customHelpPage>ffirule__helpintegrationrulerelationship</customHelpPage>
    <fields>
        <fullName>Legacy_One_DuPont_SFID__c</fullName>
        <description>This field is populated with the legacy One DuPont SF ID and was used during the split to map related records during the split and insert process to maintain the migrated record’s parent child record relationships.</description>
        <externalId>true</externalId>
        <inlineHelpText>This is the pre-split original 18 digit Salesforce ID of this record that came from the original One Dupont Salesforce instance before the business units were separated.  Its is case insensitive and unique.</inlineHelpText>
        <label>Legacy One DuPont SFID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ffirule__IntegrationRule__c</fullName>
        <label>Master ClickLink Rule</label>
        <referenceTo>ffirule__IntegrationRule__c</referenceTo>
        <relationshipLabel>ClickLink Relationships (Master ClickLink)</relationshipLabel>
        <relationshipName>IntegrationRuleRelationships</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ffirule__RelationshipIntegrationRule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Detail ClickLink Rule</label>
        <referenceTo>ffirule__IntegrationRule__c</referenceTo>
        <relationshipLabel>ClickLink Relationships (Detail ClickLink)</relationshipLabel>
        <relationshipName>RelationshiIntegrationRule</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ffirule__RelationshipName__c</fullName>
        <label>Source Relationship Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffirule__RelationshipSourceObject__c</fullName>
        <formula>ffirule__RelationshipIntegrationRule__r.ffirule__SourceObject__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Source Relationship Object</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffirule__RelationshipTargetField__c</fullName>
        <label>Target Relationship Field</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffirule__RelationshipTargetObject__c</fullName>
        <formula>ffirule__RelationshipIntegrationRule__r.ffirule__TargetObject__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Target Relationship Object</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffirule__SourceRelationshipField__c</fullName>
        <label>Source Relationship Field</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>ClickLink Relationship</label>
    <nameField>
        <label>Description</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ClickLink Relationships</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>